@@ -1,3 +1,9 @@
+2001-05-01  Eric Blake  <ebb9@email.byu.edu>
+
+	* expr.cppL: A string expression was not
+	being treated as a constant, thus breaking
+	some instanceof tests.
+
 2001-04-26  Mo DeJong  <mdejong@redhat.com>
 
 	* src/stream.cpp (DecodeNextCharacter): Use
